# saas-graph

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/ecommerce/: demo.py  docker-compose.yml  main.py  schema_context.yaml  seed.sql
examples/healthcare/: main.py  schema_context.yaml
examples/inventory/: docker-compose.yml  main.py  schema_context.yaml  seed.js
src/saas_graph/: __init__.py  pipeline.py
src/saas_graph/cli/: main.py
src/saas_graph/contrib/: __init__.py  memory.py  memory_session.py  mongodb.py  openai.py  postgres.py  tavily.py
src/saas_graph/core/: __init__.py  builder.py  edges.py  emitter.py  state.py
src/saas_graph/interfaces/: __init__.py  cache.py  embedding.py  executor.py  knowledge.py  llm.py  schema_loader.py  search.py  session.py
src/saas_graph/models/: __init__.py  clarification.py  config.py  conversation.py  intent.py  plan.py  schema.py  sql.py
src/saas_graph/nodes/: __init__.py  cache.py  clarifier.py  executor.py  formatter.py  planner.py  router.py  schema_linker.py  sql_generator.py
src/saas_graph/server/: router.py
src/saas_graph/utils/: intent_analyzer.py  schema_loader.py
tests/test_contrib/: test_memory.py  test_openai_gateway.py  test_postgres.py  test_tavily_search.py
tests/test_core/: test_edges.py  test_emitter.py  test_state.py
tests/test_nodes/: test_clarifier.py  test_formatter.py  test_router.py  test_sql_generator.py
