[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saas-graph"
version = "0.1.0"
description = "AI analytics assistant framework — connect your database, get natural language querying"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Alisia Reveli", email = "alisjareveli@gmail.com" }]
keywords = ["ai", "analytics", "text-to-sql", "rag", "llm", "saas", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0", "instructor>=1.0", "eval_type_backport>=0.2; python_version < '3.10'"]
postgres = ["asyncpg>=0.29"]
mongodb = ["motor>=3.0"]
supabase = ["supabase>=2.0"]
pgvector = ["openai>=1.0"]
redis = ["redis>=5.0"]
tavily = ["tavily-python>=0.4"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "sse-starlette>=2.0"]
langgraph = ["langgraph>=0.2"]
cli = ["typer>=0.12", "rich>=13.0"]
all = [
    "saas-graph[openai,postgres,mongodb,pgvector,redis,tavily,server,langgraph,cli]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/AlisiaReveli/saas-graph"
Documentation = "https://github.com/AlisiaReveli/saas-graph#readme"
Repository = "https://github.com/AlisiaReveli/saas-graph"
Issues = "https://github.com/AlisiaReveli/saas-graph/issues"

[project.scripts]
saas-graph = "saas_graph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_graph"]

[tool.hatch.build.targets.sdist]
exclude = ["examples/*/seed.sql", "examples/*/docker-compose.yml"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
